<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.android.navandbot.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.android.navandbot.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.android.navandbot.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.android.navandbot.ui.homebottom.BottomFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_bottom" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.android.navandbot.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.android.navandbot.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.android.navandbot.ui.base.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.android.navandbot.ui.base.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/fragmentRecyclerListLayout"
        android:name="com.example.android.navandbot.ui.recycler.list.FragmentRecyclerListLayout"
        android:label="fragment_recycler_list_layout_list"
        tools:layout="@layout/fragment_recycler_list_layout_list" />
    <fragment
        android:id="@+id/fragmentRecyclerGridLayout"
        android:name="com.example.android.navandbot.ui.recycler.grid.FragmentRecyclerGridLayout"
        android:label="fragment_recycler_grid_layout_list"
        tools:layout="@layout/fragment_recycler_grid_layout_list" />

</navigation>